# libmnv

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENCE  README.md  annotated.html  classes.html  classmnv_1_1MNVGenerator-members.html  classmnv_1_1MNVGenerator.html  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f361971980ba01eeae802e7f1af660ed.html  dir_f361971980ba01eeae802e7f1af660ed_dep.dot  doxygen_crawl.html  files.html  functions.html  functions_enum.html  functions_func.html  functions_vars.html  menudata.js  mnv-impl_8hpp_source.html  mnv_8hpp.html  mnv_8hpp__incl.dot  mnv_8hpp_source.html  namespacemembers.html  namespacemembers_func.html  namespacemembers_type.html  namespacemnv.html  namespaces.html  structmnv_1_1MNVGeneratorBuildError-members.html  structmnv_1_1MNVGeneratorBuildError.html
.github/workflows/: gh-pages.yaml  main.yaml
cmake/: mnv-config.cmake.in
docs/: Doxyfile.in  mainpage.dox
examples/: CMakeLists.txt
examples/add/: CMakeLists.txt  main.cpp
examples/mnv/: CMakeLists.txt  main.cpp
include/mnv/: mnv-impl.hpp  mnv.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  classes_0.js  enums_0.js  files_0.js  functions_3.js  namespaces_0.js  searchdata.js  typedefs_0.js  typedefs_1.js  variables_0.js
src/: mnv.cpp
tests/: CMakeLists.txt  add_test.cpp  mnv_test.cpp
