cmake_minimum_required(VERSION 3.14)
project(mnv-add LANGUAGES CXX)

include("../../cmake/utils.cmake")
string(COMPARE EQUAL "${CMAKE_SOURCE_DIR}" "${CMAKE_CURRENT_SOURCE_DIR}" is_top_level)

if(is_top_level)
    find_package(mnv REQUIRED)
endif()

set(sources main.cpp)
source_group(TREE "${CMAKE_CURRENT_SOURCE_DIR}" FILES ${sources})

add_executable(mnv-add)
target_sources(mnv-add PRIVATE ${sources})
target_link_libraries(mnv-add PRIVATE mnv::mnv)
